re-organize the hw and exam folders